--- a/index.css
+++ b/index.css
@@ -1,9 +1,45 @@
+/* body태그에 적용됨 */
 body{
     background-color: peru;
   }
 
-h1{
-    color: white;
+/* class 이름이 btn에 적용됨 */
+.btn {
+  cursor: pointer;
 }
 
-/* HTML 태그의 id는 #을 사용 */
+h1{
+    color: #34495e;
+    transition: color 0.5s ease-in-out;
+}
+
+.clicked {
+  color: #7f8c8d;
+}
+
+.form, .greetings {
+  display: none;
+}
+
+.showing {
+  display: block;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.bgImage{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadeIn 0.5s linear;
+}
